[package]
name = "erased-serde-cbor"
version = "0.1.0"
authors = ["William Hua <william@attente.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = { version = "0.10.2", default-features = false, features = ["alloc"] }
erased-serde = "0.3.9"

[features]
default = ["std"]
std = ["serde_cbor/std"]
